--- a/index.html
+++ b/index.html
@@ -11,13 +11,23 @@
 <body>
   <div class="container">
     <h2>PingPong!!</h2>
+    <h3>Get into the game mode :)</h3>
+    <h4>A few rules before we start:</h4>
+    <p>Ping pong will count up o your number from 1 with the following exceptions:
+    <ol>
+      <li>Numbers divisible by 3 become Ping</li>
+      <li>Numbers divisible by 5 become pong</li>
+      <li>Numbers divisible by 15 become PingPong</li>
+    </ol>
+  </p>
     <form id="ping-pong">
       <div class="form-group">
-        <label for="ping-pong">Enter a number and find out if it is a ping, pong or a pingpong:</label>
-        <input id="ping-pong" type="text">
-      </div>
-        <button type="submit" class="btn">See results!</button>
+        <label for="ping">Enter your number here:</label>
+        <input id="pong" type="text">
+        <button type="submit" class="btn">Ping Pong!</button>
+          </div>
    </form>
+   <div class="results"></div>
      </div>
   <link rel="stylesheet" href="js/jquery-3.3.1.js">
   <link rel="stylesheet" href="js/scripts.js">
