--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    </form>
    <div class="results"></div>
      </div>
-  <link rel="stylesheet" href="js/jquery-3.3.1.js">
-  <link rel="stylesheet" href="js/scripts.js">
+  <script src="js/jquery-3.3.1.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
