add copyright details

--- a/index.html
+++ b/index.html
@@ -10,26 +10,39 @@
 </head>
 <body>
   <div class="container">
-    <h2>PingPong!!</h2>
-    <h3>Get into the game mode :)</h3>
-    <h4>A few rules before we start:</h4>
-    <p>Ping pong will count up o your number from 1 with the following exceptions:
-    <ol>
-      <li>Numbers divisible by 3 become Ping</li>
-      <li>Numbers divisible by 5 become pong</li>
-      <li>Numbers divisible by 15 become PingPong</li>
-    </ol>
-  </p>
-    <form id="ping-pong">
+    <div class="row col-md-12 header">
+      <h1>PingPong!!</h1>
+    </div>
+      <h3>Get into the game mode :)</h3>
+      <h4>A few rules before we start:</h4>
+      <p>Ping pong will count up your number from 1 with the following exceptions:</p>
+      <ol>
+        <li>Numbers divisible by 3 become "ping"</li>
+        <li>Numbers divisible by 5 become "pong"</li>
+        <li>Numbers divisible by 15 become "pingpong"</li>
+      </ol>
+      <h4 class="gaming">Happy Gaming<h4>
+
       <div class="form-group">
-        <label for="ping">Enter your number here:</label>
-        <input id="pong" type="text">
-        <button type="submit" class="btn">Ping Pong!</button>
-          </div>
-   </form>
-   <div class="results"></div>
+       <form id="userInput" actions="index.html" method="get">
+        <label for="userNumber">Enter your number here:</label>
+        <input id="countTo" type="number" name="number" value="">
+        <button type="submit" name="button">Ping Pong!</button>
+      </form>
+   </div>
+   <div class="results">
+     <ul id="results">
+     </ul>
+   </div>
+
+     <div class="copyright">
+       <img src="copyright.png" alt="copyright" width="150" height="50">
+       <p>All Rights Reserved</p>
+       <p>Rehan Edin</p>
+       2018
      </div>
-  <script src="js/jquery-3.3.1.js"></script>
-  <script src="js/scripts.js"></script>
-</body>
+      </div>
+     <script src="js/jquery-3.3.1.js"></script>
+     <script src="js/scripts.js"></script>
+ </body>
 </html>
