float copyright to the right

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li>Numbers divisible by 5 become "pong"</li>
         <li>Numbers divisible by 15 become "pingpong"</li>
       </ol>
-      <h4 class="gaming">Happy Gaming<h4>
+      <h4 class="gaming">Happy Gaming<h4> <img src="pingpong.jpeg" alt="pingpong" width="120" height="90">
 
       <div class="form-group">
        <form id="userInput" actions="index.html" method="get">
