--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <li>Numbers divisible by 5 become "pong"</li>
         <li>Numbers divisible by 15 become "pingpong"</li>
       </ol>
-      <h4 class="gaming">Happy Gaming<h4> <img src="pingpong.jpeg" alt="pingpong" width="120" height="90">
 
       <div class="form-group">
        <form id="userInput" actions="index.html" method="get">
@@ -42,6 +41,9 @@
        2018
      </div>
       </div>
+      <h3 class="gaming">Happy Gaming</h3>
+      <div style="text-align:center"><img src="pingpong.jpeg" alt="pingpong" width="160" height="140"></div>
+
      <script src="js/jquery-3.3.1.js"></script>
      <script src="js/scripts.js"></script>
  </body>
